Updated gitignore - added task_4 node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules
 0x04-TypeScript/task_1/node_modules
 0x04-TypeScript/task_2/node_modules
 0x04-TypeScript/task_3/node_modules
+0x04-TypeScript/task_4/node_modules
