--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ node_modules
 0x04-TypeScript/task_2/node_modules
 0x04-TypeScript/task_3/node_modules
 0x04-TypeScript/task_4/node_modules
+0x04-TypeScript/task_5/node_modules
